--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,6 +1,6 @@
 .c-nav {
   padding: 1rem;
-  border-bottom: 1px solid #a0a0a0;
+  border-bottom: 1px solid #e2e2e2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
