--- a/src/styles/allUsers.css
+++ b/src/styles/allUsers.css
@@ -39,6 +39,10 @@
   border-top-right-radius: 5px;
 }
 
+.c-allUsers__notFound {
+  text-align: center;
+}
+
 .c-allUsers__nav--desk, .c-allUsers__textDesk {
   display: none;
 }
