--- a/src/styles/allUsers.scss
+++ b/src/styles/allUsers.scss
@@ -34,6 +34,10 @@
         border-top-right-radius: 5px;
     }
 
+    &__notFound {
+        text-align: center;
+    }
+
     &__nav--desk, &__textDesk {
         display: none;
     }
