--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,5 +1,5 @@
 .c-card__section {
-  border-bottom: 1px solid #a0a0a0;
+  border-bottom: 1px solid #e2e2e2;
   margin-bottom: 20px;
 }
 
@@ -25,7 +25,7 @@
 .c-card__img {
   border-radius: 50%;
   margin-right: 20px;
-  border: 1px solid #a0a0a0;
+  border: 1px solid #e2e2e2;
   padding: 3px;
 }
 
