--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,6 +1,6 @@
 .c-nav {
     padding: 1rem;
-    border-bottom: 1px solid rgb(160, 160, 160);
+    border-bottom: 1px solid #e2e2e2;
     display: flex;
     align-items: center;
 
