--- a/src/styles/userProfile.css
+++ b/src/styles/userProfile.css
@@ -231,6 +231,10 @@
   display: none;
 }
 
+.c-userProfile__nav--mobile {
+  margin: 15px 15px 0 15px;
+}
+
 @media (min-width: 769px) {
   .c-userProfile {
     margin: 0;
@@ -336,7 +340,7 @@
     display: -ms-flexbox;
     display: flex;
     position: relative;
-    height: 100%;
+    min-height: calc(100vh - 500px);
   }
   .c-userProfile__buttons {
     width: 20%;
