--- a/src/styles/userProfile.scss
+++ b/src/styles/userProfile.scss
@@ -195,6 +195,10 @@
     &__nav--desk {
         display: none;
     }
+
+    &__nav--mobile {
+        margin: 15px 15px 0 15px;
+    }
 }
 
 @media (min-width: 769px) {
@@ -301,7 +305,7 @@
         &__information {
             display: flex;
             position: relative;
-            height: 100%;
+            min-height: calc(100vh - 500px);
         }
 
         &__buttons {
